Largest fish cat winners

--- a/prizes.html
+++ b/prizes.html
@@ -779,37 +779,37 @@
                         </div>
                       </div>
                     </div>
-                    <!--<div class="row mb-2">
+                    <div class="row mb-2">
                       <div class="col-sm-12">
                         <h2 class="brand-blue">2021 Species Prize Winners</h2>
                         <div class="table-responsive">
                           <table class="table">
                             <thead>
-                              <th>Contestant</th>
-                              <th>Weight</th>
+                              <!-- <th>Contestant</th> -->
+                              <!-- <th>Weight</th> -->
                               <th>Species</th>
                             </thead>
                             <tbody>
                               <tr>
-                                <td>Nicole Funkhauser</td>
-                                <td>1.688</td>
+                                <!-- <td>Nicole Funkhauser</td> -->
+                                <!-- <td>1.688</td> -->
                                 <td>Crappie (Pan fish category)</td>
                               </tr>
                               <tr>
-                                <td>Jon Zierden</td>
-                                <td>3.110</td>
+                                <!-- <td>Jon Zierden</td> -->
+                                <!-- <td>3.110</td> -->
                                 <td>Walleye</td>
                               </tr>
                               <tr>
-                                <td>Logan Parker</td>
-                                <td>10.231</td>
+                                <!-- <td>Logan Parker</td> -->
+                                <!-- <td>10.231</td> -->
                                 <td>Northern</td>
                               </tr>
                             </tbody>
                           </table>
                         </div>
                       </div>
-                    </div>-->
+                    </div>
                     <div class="row mb-2">
               				<div class="col-sm-12">
                         <h2 class="brand-blue">2021 The One That Got Away Prize</h2>
