--- a/prizes.html
+++ b/prizes.html
@@ -394,7 +394,7 @@
                                 <!-- <td>Lee Kurkowski</td> -->
                                 <!-- <td>2.930</td> -->
                                 <!-- <td>Northern</td> -->
-                  							<td>$50 Mega/Holiday Gift Card</td>
+                  							<td>FLOE Cargo Max XRT 8-57 Trailer</td>
                   						</tr>
                               <tr>
                                 <th>150</th>
