--- a/index.html
+++ b/index.html
@@ -116,6 +116,12 @@
               <img class="d-block img-fluid" src="./images/slider/logo2021.png" alt="First slide">
             </div>
             <div class="carousel-item">
+              <img class="d-block img-fluid" src="./images/slider/eventmap.png" alt="Event map">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="./images/slider/prizeinfo.jpg" alt="Prize info">
+            </div>
+            <div class="carousel-item">
               <img class="d-block img-fluid" src="./images/slider/slide2.jpeg" alt="Second slide">
             </div>
             <div class="carousel-item">
@@ -179,6 +185,7 @@
         </div>
       </div>
     </div>
+
 
     <div class="row">
       <div class="col-lg-6">
@@ -269,6 +276,7 @@
       </div>
     </div>
   </div>
+
   <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto pt-2">
     <div class="row mx-6">
       <div class="col-lg-3 text-center my-auto mx-auto">
