--- a/tickets.html
+++ b/tickets.html
@@ -100,7 +100,7 @@
   <div class="container px-4">
     <div class="row">
 			<div class="col mx-2">
-				<h2 class="brand-blue"><a href="https://eventbrite.com/e/jigs-up-blugold-ice-fishing-contest-on-lake-wissota-tickets-72157724697" target="_blank">Buy Tickets or Donate Here!</a></h2>
+				<h2 class="brand-blue"><a href="https://www.eventbrite.com/e/jigs-up-blugold-ice-fishing-contest-on-lake-wissota-tickets-95905450785?aff=erelexpmlt" target="_blank">Buy Tickets or Donate Here!</a></h2>
         <i>*If donating, click the link above and navigate to the tickets button</i>
 			</div>
     </div>
