Added raffle prizes, updated wifa

--- a/prizes.html
+++ b/prizes.html
@@ -829,117 +829,127 @@
                         </div>
                       </div>
                     </div>
-                    <!--<div class="row mb-2">
+                    <div class="row mb-2">
               				<div class="col-sm-12">
                         <h2 class="brand-blue">2021 Raffle Prize List</h2>
                         <div class="table-responsive">
               						<table class="table">
                             <thead>
                               <th>Place</th>
-                              <th>Contestant</th>
+                              <!-- <th>Contestant</th> -->
                               <th>Prize</th>
               							</thead>
               							<tbody>
                               <tr>
                                 <th>1</th>
-                                <td>Al Goulet</td>
-                                <td>2019 Polaris Sportsman 450 ATV</td>
+                                <!-- <td>Al Goulet</td> -->
+                                <td>2020 Plaris Sportsman 570 ATV</td>
                               </tr>
                               <tr>
                                 <th>2</th>
-                                <td>Elena Crownover</td>
+                                <!-- <td>Elena Crownover</td> -->
                                 <td>$500 Scheels Gift Card</td>                               
                               </tr>
                               <tr>
                                 <th>3</th>
-                                <td>Derek LaRock</td>
+                                <!-- <td>Derek LaRock</td> -->
                                 <td>$500 Scheels Gift Card</td>                               
                               </tr>
                               <tr>
                                 <th>4</th>                             
-                                <td>Keith Minion</td>
+                                <!-- <td>Keith Minion</td> -->
                                 <td>$500 Scheels Gift Card</td>
                               </tr>
                               <tr>
                                 <th>5</th>
-                                <td>Ryan Van Blaricom</td>
+                                <!-- <td>Ryan Van Blaricom</td> -->
                                 <td>$500 Scheels Gift Card</td>                              
                               </tr>
                               <tr>
                                 <th>6</th>
-                                <td>Brian Lanners</td>
-                                <td>Monster Energy Mini Fridge</td>                               
+                                <!-- <td>Brian Lanners</td> -->
+                                <td>$25 The View GC + Eau Claire Express Baseball Tickets</td>                               
                               </tr>
                               <tr>
                                 <th>7</th>
-                                <td>Todd Nutter</td>
-                                <td>Monster Energy Fishing Raft</td>                                
+                                <!-- <td>Todd Nutter</td> -->
+                                <td>Free weekend camper rental from Chippewa Valley RV ($450 value)</td>                                
                               </tr>
                               <tr>
                                 <th>8</th>
-                                <td>Mark and Nancy Baenen</td>
-                                <td>1-night Stay at Ho-Chunk Gaming Black River Falls Hotel</td>                                
+                                <!-- <td>Mark and Nancy Baenen</td> -->
+                                <td>$10 Scheels Gift Card + Monster Energy Retro Boombox</td>                                
                               </tr>
                               <tr>
                                 <th>9</th>
-                                <td>Travis Bushay</td>
-                                <td>1-night Stay at Mole Lake Casino</td>                                
+                                <!-- <td>Travis Bushay</td> -->
+                                <td>$25 Wissota Lodge Gift Card + RTIC Mug</td>                                
                               </tr>
                               <tr>
                                 <th>10</th>
-                                <td>Nick Miazga</td>
-                                <td>$100 Steak Package from Blugold Dining</td>                               
+                                <!-- <td>Nick Miazga</td> -->
+                                <td>$25 SandBar Gift Card + RTIC Mug</td>                               
                               </tr>
                               <tr>
                                 <th>11</th>
-                                <td>Mike Zemmer</td>
-                                <td>$100 Steak Package from Blugold Dining</td>                                
+                                <!-- <td>Mike Zemmer</td> -->
+                                <td>$25 The Edge Gift Card + Monster Energy Package</td>                                
                               </tr>
                               <tr>
                                 <th>12</th>
-                                <td>Linda Leonard</td>
-                                <td>1-night Stay at Lake of the Torches Resort Casino</td>                               
+                                <!-- <td>Linda Leonard</td> -->
+                                <td>$25 Wissota Lodge Gift Card + RTIC Mug</td>                               
                               </tr>
                               <tr>
                                 <th>13</th>
-                                <td>Craig Knudtson</td>
-                                <td>Green Bay Packer Prize Package</td>                               
+                                <!-- <td>Craig Knudtson</td> -->
+                                <td>Autographed Packer Football</td>                               
                               </tr>
                               <tr>
                                 <th>14</th>
-                                <td>Garry Running</td>
-                                <td>Visit EC/The Local Store basket + The View GC</td>                                
+                                <!-- <td>Garry Running</td> -->
+                                <td>$50 Mega CO-OP Gift Card</td>                                
                               </tr>
                               <tr>
                                 <th>15</th>
-                                <td>Mark Bollinger</td>
-                                <td>Monster Energy Backpack and Apparel</td>                                
+                                <!-- <td>Mark Bollinger</td> -->
+                                <td>$25 The Edge Gift Card + UW-EC Football Package</td>                                
                               </tr>
                               <tr>
                                 <th>16</th>
-                                <td>Ryan Ehlke</td>
-                                <td>EC Express tickets + The View Pizza Party</td>                               
+                                <!-- <td>Ryan Ehlke</td> -->
+                                <td>$25 SandBar Gift Card + Visit Eau Claire Basket</td>                               
                               </tr>
                               <tr>
                                 <th>17</th>                               
-                                <td>Ben Leurquin</td>
-                                <td>$25 The Edge + Apparel</td>
+                                <!-- <td>Ben Leurquin</td> -->
+                                <td>$25 The Edge Gift Card + UW-EC Football Package</td>
                               </tr>
                               <tr>
                                 <th>18</th>
-                                <td>Paige Kaiser</td>
-                                <td>Leinenkugel Paddle + $25 The Edge + The View Pizza Party</td>                              
+                                <!-- <td>Paige Kaiser</td> -->
+                                <td>$25 Wissota Lodge Gift Card + Monster Energy Package</td>                              
                               </tr>
                               <tr>
                                 <th>19</th>
-                                <td>Beck Ruzicka</td>
-                                <td>Chair + $25 The Edge + The View Pizza Party</td>
+                                <!-- <td>Beck Ruzicka</td> -->
+                                <td>$25 The View Gift Card + Jig's Up Cap</td>
+                              </tr>
+                              <tr>
+                                <th>20</th>
+                                <!-- <td></td> -->
+                                <td>$25 The Edge Gift Card + RTIC Mug</td>
+                              </tr>
+                              <tr>
+                                <th>21</th>
+                                <!-- <td></td> -->
+                                <td>$100 Wissota Lodge Gift Certificate</td>
                               </tr>
                             </tbody>
                           </table>
                         </div>
                       </div>
-                    </div>-->
+                    </div>
                     <!--<div class="row mb-2">
               				<div class="col-sm-12">
                         <h2 class="brand-blue">2021 Lion's Club Gun Raffle Winners</h2>
