--- a/contact.html
+++ b/contact.html
@@ -170,12 +170,16 @@
                 <td>Wissota Lions Club</td>
               </tr>
               <tr>
+                <td scope="row">Elizabeth Fenske</td>
+                <td>Scheels</td>
+              </tr>
+              <tr>
                 <td scope="row">Andy Jepsen</td>
                 <td>UWEC Recreation and Sport Operations</td>
               </tr>
               <tr>
-                <td scope="row">Elizabeth Fenske</td>
-                <td>Scheels</td>
+                <td scope="row">Garrett Larson</td>
+                <td>UWEC Recreation and Sport Operations</td>
               </tr>
               <tr>
                 <td scope="row">Jill Millis</td>
