Added missing prize categories, worked on alert

--- a/prizes.html
+++ b/prizes.html
@@ -157,8 +157,8 @@
                   <div class="card-body">
                     <div class="row mb-4">
                       <div class="col-sm-12">
-                        <!-- <h2 class="brand-blue">2021 Ford F150 XLT Super Crew Truck</h2> -->
-                        <!-- <h3>Joe David</h3> -->
+                        <h2 class="brand-blue">2021 Ford F150 XLT Super Crew Truck Winner</h2>
+                        <h3></h3>
                       </div>
                       <div class="col-sm-12">
                         <h2 class="brand-blue">2021 Fish Prize List</h2>
@@ -950,12 +950,12 @@
                         </div>
                       </div>
                     </div>
-                    <!--<div class="row mb-2">
+                    <div class="row mb-2">
               				<div class="col-sm-12">
                         <h2 class="brand-blue">2021 Lion's Club Gun Raffle Winners</h2>
                         <h6>Visit: <a href="https://e-clubhouse.org/sites/lakewissota/page-10.php" target="blank">Lake Wissota Lion's Club Website</a></h6>
                       </div>
-                    </div>-->                   
+                    </div>                 
                   </div>
                 </div>
               </div> 
