--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
     </nav>
   </div>
   <div class="container px-4">
-    <!--<div class="alert alert-danger alert-dismissible" style="width: 100%;">
+    <div class="alert alert-danger alert-dismissible" style="width: 100%;">
       <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
       Check out our 2021 safety procedures: <a href="./images/slider/prizeinfo.jpg" target="_blank">Prize Distribution Info</a>
-    </div>-->
+    </div>
     <div class="row">
       <div class="col-md-12">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
