Put alert on all pages

--- a/prizes.html
+++ b/prizes.html
@@ -110,6 +110,10 @@
   </div>
 
   <div class="container px-4">
+    <div class="alert alert-danger alert-dismissible" style="width: 100%;">
+      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+      Check out our 2021 safety procedures: <a href="./images/slider/prizeinfo.jpg" target="_blank">Prize Distribution Info</a>
+    </div>
     <div class="col">
       <div class="row">
         <h2 class="brand-blue">Prizes</h2>
