--- a/tickets.html
+++ b/tickets.html
@@ -98,6 +98,10 @@
     </nav>
   </div>
   <div class="container px-4">
+    <div class="alert alert-danger alert-dismissible" style="width: 100%;">
+      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+      Check out our 2021 safety procedures: <a href="./images/slider/prizeinfo.jpg" target="_blank">Prize Distribution Info</a>
+    </div>
     <div class="row">
 			<div class="col mx-2">
 				<h2 class="brand-blue"><a href="https://www.eventbrite.com/e/jigs-up-blugold-ice-fishing-contest-on-lake-wissota-tickets-95905450785?aff=erelexpmlt" target="_blank">Buy Tickets or Donate Here!</a></h2>
