--- a/directions.html
+++ b/directions.html
@@ -108,6 +108,10 @@
     </div>
 
     <div class="content container px-4">
+      <div class="alert alert-danger alert-dismissible" style="width: 100%;">
+        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+        Check out our 2021 safety procedures: <a href="./images/slider/prizeinfo.jpg" target="_blank">Prize Distribution Info</a>
+      </div>
       <div class="row">
         <div class="col-12">
           <h2 class="brand-blue">Directions</h2>
