--- a/prizes.html
+++ b/prizes.html
@@ -117,7 +117,7 @@
     <div class="col">
       <div class="row">
         <h2 class="brand-blue">Prizes</h2>
-        <p>Prize winners not present will be contacted within seven days and the prize will need to be claimed within 30 days of the event. All unclaimed prizes will remain the property of UWEC Recreation.  Prizes are the responsibility of the winners, including registration and taxes. Prizes valued at over $500 will require the social security number of the winner. Proper identification is required from all winners in order to complete the 1099-MISC form in accordance with State of Wisconsin tax law, “FEDERAL AND STATE WITHHOLDING ON PAYMENTS TO INDIVIDUALS “ which can be found at <a href="http://www.bussvc.wisc.edu/acct/policy/tax/taxapp2.html">http://www.bussvc.wisc.edu/acct/policy/tax/taxapp2.html</a>.</p>
+        <p>Prize winners not present will be contacted within seven days and the prize will need to be claimed within 30 days of the event. If you are a prize winner and have not been contacted within seven days, please call the Recreation office at 715-836-3377. All unclaimed prizes will remain the property of UWEC Recreation.  Prizes are the responsibility of the winners, including registration and taxes. Prizes valued at over $500 will require the social security number of the winner. Proper identification is required from all winners in order to complete the 1099-MISC form in accordance with State of Wisconsin tax law, “FEDERAL AND STATE WITHHOLDING ON PAYMENTS TO INDIVIDUALS “ which can be found at <a href="http://www.bussvc.wisc.edu/acct/policy/tax/taxapp2.html">http://www.bussvc.wisc.edu/acct/policy/tax/taxapp2.html</a>.</p>
       </div>
     </div>
   </div>
