added raffle prizes

--- a/scroll.html
+++ b/scroll.html
@@ -364,6 +364,73 @@
 							<th scope='row' width='5%'>500</th>
 							<td width='45%'>   Eskimo F1 Rocket Auger</td>
 						</tr>
+						<tr>
+							<td></td>
+							<th style='font-size: large'>Raffle Prize Winners</th>
+						</tr>
+						<tr>
+							<th scope='row' width='5%'>1</th>
+							<td width='45%'>2020 Polaris Sportsman 570 ATV</td>
+						<tr>
+							<th scope='row' width='5%'>2</th>
+							<td width='45%'>$500 Scheels Gift Card</td>
+						<tr>
+							<th scope='row' width='5%'>3</th>
+							<td width='45%'>$500 Scheels Gift Card</td>
+						<tr>
+							<th scope='row' width='5%'>4</th>
+							<td width='45%'>$500 Scheels Gift Card</td>
+						<tr>
+							<th scope='row' width='5%'>5</th>
+							<td width='45%'>$500 Scheels Gift Card</td>
+						<tr>
+							<th scope='row' width='5%'>6</th>
+							<td width='45%'>$25 The View GC + Eau Claire Express Baseball Tickets</td>
+						<tr>
+							<th scope='row' width='5%'>7</th>
+							<td width='45%'>Free weekend camper rental from Chippewa Valley RV ($450 value)</td>
+						<tr>
+							<th scope='row' width='5%'>8</th>
+							<td width='45%'>$10 Scheels Gift Card + Monster Energy Retro Boombox</td>
+						<tr>
+							<th scope='row' width='5%'>9</th>
+							<td width='45%'>$25 Wissota Lodge Gift Card + RTIC Mug</td>
+						<tr>
+							<th scope='row' width='5%'>10</th>
+							<td width='45%'>$25 SandBar Gift Card + RTIC Mug</td>
+						<tr>
+							<th scope='row' width='5%'>11</th>
+							<td width='45%'>$25 The Edge Gift Card + Monster Energy Package</td>
+						<tr>
+							<th scope='row' width='5%'>12</th>
+							<td width='45%'>$25 Wissota Lodge Gift Card + RTIC Mug</td>
+						<tr>
+							<th scope='row' width='5%'>13</th>
+							<td width='45%'>Autographed Packer Football</td>
+						<tr>
+							<th scope='row' width='5%'>14</th>
+							<td width='45%'>$50 Mega CO-OP Gift Card</td>
+						<tr>
+							<th scope='row' width='5%'>15</th>
+							<td width='45%'>$25 The Edge Gift Card + UW-EC Football Package</td>
+						<tr>
+							<th scope='row' width='5%'>16</th>
+							<td width='45%'>$25 SandBar Gift Card + Visit Eau Claire Basket</td>
+						<tr>
+							<th scope='row' width='5%'>17</th>
+							<td width='45%'>$25 The Edge Gift Card + UW-EC Football Package</td>
+						<tr>
+							<th scope='row' width='5%'>18</th>
+							<td width='45%'>$25 Wissota Lodge Gift Card + Monster Energy Package</td>
+						<tr>
+							<th scope='row' width='5%'>19</th>
+							<td width='45%'>$25 The View Gift Card + Jig's Up Cap</td>
+						<tr>
+							<th scope='row' width='5%'>20</th>
+							<td width='45%'>$25 The Edge Gift Card + RTIC Mug</td>
+						<tr>
+							<th scope='row' width='5%'>21</th>
+							<td width='45%'>$100 Wissota Lodge Gift Certificate</td>
 					</tbody>
 				</table>
 			</div>
