--- a/liveResults.html
+++ b/liveResults.html
@@ -118,7 +118,7 @@
           <h5>Join us on February 6th on this page for live results.</h5>
         </div>
       </div>
-      <!-- <div class="row">
+      <div class="row">
         <div class="col">
           <table id="table" class="table table-striped table-bordered">
             <thead class="thead-light">
@@ -134,7 +134,7 @@
             </tbody>
           </table>
         </div>
-      </div> -->
+      </div>
     </div>
   <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto pt-2">
     <div class="row mx-6">
