--- a/liveResults.html
+++ b/liveResults.html
@@ -115,7 +115,7 @@
       <div class="row">
         <div class="col-12 pb-4">
           <h2 class="brand-blue">Live Results</h2>
-          <h5>Join us on February 6th on this page for live results.</h5>
+          <!-- <h5>Join us on February 6th on this page for live results.</h5> -->
         </div>
       </div>
       <div class="row">
