--- a/tickets.html
+++ b/tickets.html
@@ -100,7 +100,7 @@
   <div class="container px-4">
     <div class="alert alert-danger alert-dismissible" style="width: 100%;">
       <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-      Check out our 2021 safety procedures: <a href="./images/slider/prizeinfo.jpg" target="_blank" class="alert-link">Prize Distribution Info</a>
+     <a href="scroll.html" class="alert-link">Click here for 2021 Fish Prize Winners.</a> Check out our 2021 safety procedures: <a href="./images/slider/prizeinfo.jpg" target="_blank" class="alert-link">Prize Distribution Info</a>
     </div>
     <div class="row">
 			<div class="col mx-2">
