--- a/prizes.html
+++ b/prizes.html
@@ -876,26 +876,26 @@
                         <div class="table-responsive">
                           <table class="table">
                             <thead>
-                              <!-- <th>Contestant</th> -->
-                              <!-- <th>Weight</th> -->
-                              <th>Species</th>
+                              <th colspan='3'>Contestant</th>
+                              <th colspan='2'>Species</th>
+                              <th>Weight</th>
                             </thead>
-                            <tbody>
-                              <tr>
-                                <!-- <td>Nicole Funkhauser</td> -->
-                                <!-- <td>1.688</td> -->
-                                <td>Crappie (Pan fish category)</td>
-                              </tr>
-                              <tr>
-                                <!-- <td>Jon Zierden</td> -->
-                                <!-- <td>3.110</td> -->
-                                <td>Walleye</td>
-                              </tr>
-                              <tr>
-                                <!-- <td>Logan Parker</td> -->
-                                <!-- <td>10.231</td> -->
-                                <td>Northern</td>
-                              </tr>
+                            <tr>
+                              <td colspan='3'>Jeremy Zenner</td>
+                              <td colspan='2'>Northern</td>
+                              <td>13.189</td>
+                            </tr>
+                            <tr>
+                              <td colspan='3'>James Testor</td>
+                              <td colspan='2'>Walleye</td>
+                              <td>5.254</td>
+                            </tr>
+                            <tr>
+                              <td colspan='3'>Leo Kurkowski</td>
+                              <td colspan='2'>Crappie (Pan Fish Category)</td>
+                              <td>1.899</td>
+                
+                            </tr>
                             </tbody>
                           </table>
                         </div>
@@ -907,14 +907,16 @@
                         <div class="table-responsive">
               						<table class="table">
               							<tbody>
-                              <thead>
-                                <th>Contestant</th>
+                              <head>
+                                <th colspan='2'>Contestant</th>
+                                <th colspan='3'>Ticket #</th>
                                 <th>Prize</th>
-                              </thead>
+                              </head>
                               <tr>
-                                <!-- <td>Thomas Evenson</td> -->
-                  							<td>Eskimo Mako 43cc 8 Inch Auger</td>
-                  						</tr>
+                                <td colspan='2'>Robert Court</td>
+                                <td colspan='3'>0059</td>
+                                <td>Eskimo Mako 43cc 8 Inch Auger</td>
+                              </tr>
                             </tbody>
                           </table>
                         </div>
