--- a/lodging.html
+++ b/lodging.html
@@ -111,7 +111,7 @@
     <div class="content container px-4">
       <div class="alert alert-danger alert-dismissible" style="width: 100%;">
         <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-       <a href="scroll.html" class="alert-link">Click here for 2021 Fish Prize Winners.</a> All winners will be contacted this week and a time will be arranged for prize pick up. Check out our 2021 safety procedures: <a href="./images/slider/prizeinfo.jpg" target="_blank" class="alert-link">Prize Distribution Info</a>
+       <a href="prizes.html" class="alert-link">Click here for 2021 Fish Prize Winners.</a> All winners will be contacted this week and a time will be arranged for prize pick up. Check out our 2021 safety procedures: <a href="./images/slider/prizeinfo.jpg" target="_blank" class="alert-link">Prize Distribution Info</a>
       </div>
       <div class="row">
         <div class="col">
