--- a/prizes.html
+++ b/prizes.html
@@ -162,7 +162,7 @@
                     <div class="row mb-4">
                       <div class="col-sm-12">
                         <h2 class="brand-blue">2021 Ford F150 XLT Super Crew Truck Winner</h2>
-                        <h3></h3>
+                        <h4>Eric Wright (Ticket Number: 0913)</h4>
                       </div>
                       <div class="col-sm-12">
                         <h2 class="brand-blue">2021 Fish Prize List</h2>
@@ -930,7 +930,7 @@
                             <thead>
                               <th>Place</th>
                               <th>Contestant</th>
-                              <th>Ticket Number</th>
+                              <th colspan='3'>Ticket Number</th>
                               <th>Prize</th>
               							</thead>
               							<tbody>
