--- a/scroll.html
+++ b/scroll.html
@@ -802,8 +802,8 @@
 						</tr>
 						<tr>
 							<th>13</th>
-							<td>Meghan Sommers</td>
-							<td colspan='3'>4995</td>
+							<td></td>
+							<td colspan='3'></td>
 							<td>Autographed Packer Football</td>
 						</tr>
 						<tr>
