--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,11 @@
   <meta name="keywords" content="Jigs, UP, UW, Eau, Claire, Blugolds, UWEC, Recreation, Lions">
   <meta name="google-site-verification" content="xUZPrgS-phrSLmBwygrSX_erJevxGxg1AG6Dubw3fY4" />
 
+  <!-- Facebook Sharing Image meta tags -->
+  <meta property="og:image" content="./images/athletics.png"/>
+  <meta property="og:image:width" content="450"/>
+  <meta property="og:image:height" content="298"/>
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/brand.css">
