--- a/tickets.html
+++ b/tickets.html
@@ -1,6 +1,6 @@
 
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
