Changed image path

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta name="google-site-verification" content="xUZPrgS-phrSLmBwygrSX_erJevxGxg1AG6Dubw3fY4" />
 
   <!-- Facebook Sharing Image meta tags -->
-  <meta property="og:image" content="./images/athletics.png"/>
+  <meta property="og:image" content="http://jigsup.org/images/athletics.png"/>
   <meta property="og:image:width" content="450"/>
   <meta property="og:image:height" content="298"/>
 
