Updated image name and properties

--- a/lodging.html
+++ b/lodging.html
@@ -21,7 +21,7 @@
   <meta name="google-site-verification" content="xUZPrgS-phrSLmBwygrSX_erJevxGxg1AG6Dubw3fY4" />
 
   <!-- Facebook Sharing Image meta tags -->
-  <meta property="og:image" content="http://jigsup.org/images/athletics3.png"/>
+  <meta property="og:image" content="http://jigsup.org/images/fbsharinglogo.png"/>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
