--- a/prizes.html
+++ b/prizes.html
@@ -662,11 +662,11 @@
                               </tr>
                               <tr>
                                 <th>430</th>
-                                <td>Lisit Schuetz</td>
+                                <td>Lisa Schuetz</td>
                                 <td>1594</td>
                                 <td>0.428</td>
                                 <td>Walleye</td>
-                                <td>   13 Fishing Combo & Eskimo Plaid Folding Chair</td>
+                                <td>13 Fishing Combo & Eskimo Plaid Folding Chair</td>
                               </tr>
                               <tr>
                                 <th>440</th>
@@ -1012,7 +1012,7 @@
                               <tr>
                                 <th>13</th>
                                 <td>Nick Limpel</td>
-                                <td></td>
+                                <td>9832</td>
                                 <td>Autographed Packer Football</td>
                               </tr>
                               <tr>
