Updates for next year

--- a/index.html
+++ b/index.html
@@ -111,16 +111,12 @@
     </nav>
   </div>
   <div class="container px-4">
-    <div class="alert alert-danger alert-dismissible" style="width: 100%;">
-      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-     <a href="prizes.html" class="alert-link">Click here for 2021 Fish Prize Winners.</a> All winners will be contacted this week and a time will be arranged for prize pick up. Check out our 2021 safety procedures: <a href="./images/slider/prizeinfo.jpg" target="_blank" class="alert-link">Prize Distribution Info</a>
-    </div>
     <div class="row">
       <div class="col-md-12">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block img-fluid" src="./images/slider/logo2021.png" alt="First slide">
+              <img class="d-block img-fluid" src="./images/slider/logo2022.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
               <img class="d-block img-fluid" src="./images/slider/eventmap.png" alt="Event map">
@@ -179,7 +175,7 @@
 
     <div class="text-center">
       <h5 class="headers brand-blue">UWEC Recreation, Blugold Athletics, and the Lake Wissota Lions Club presents:</h5>
-      <h1 class="headers brand-blue"><b>8th Annual JIG'S UP Blugold Ice Fishing Contest</b></h1>
+      <h1 class="headers brand-blue"><b>9th Annual JIG'S UP Blugold Ice Fishing Contest</b></h1>
       <div class="row justify-content-center">
         <div class="col-4 col-md-3">
           <a href="http://www.uwec.edu/recreation"><img src="./images/recreation2.png" class=" logo img-fluid " alt="Recreation"></a>
@@ -198,7 +194,7 @@
       <div class="col-lg-6">
         <div class="row px-3">
           <h3 class="d-block-inline brand-blue"><b>Date:</b></h3>
-          <h5 class="d-block-inline my-auto ml-2">Saturday, February 6th, 2021</h5>
+          <h5 class="d-block-inline my-auto ml-2">Saturday, February 12th, 2022</h5>
         </div>
         <div class="row px-3">
           <h3 class="d-inline-block brand-blue"><b>Time:</b></h3>
@@ -214,7 +210,7 @@
               <li>The View on Lake Wissota</li>
               <li class="mb-3">The Edge Pub & Eatery</li>
               <li><h5><b>Prize Distribution</b></h5></li>
-              <li>Feb. 6th</li>
+              <li>Feb. 12th</li>
               <!-- <li>The View on Lake Wissota starting at 3pm</li> -->
             </ul>
           </div>
@@ -225,9 +221,9 @@
           </div>
           <div class="col-12 p-0">
             <ul class="bulletless-grey">
-              <li class="mb-2">Over $80,000 in cash and prizes including a 2-year lease on a <b>2021 Ford F150 XLT Super Crew Truck</b> drawn from all registered Fish Tickets! Prizes awarded by weight to the top 20 fish and every 10th place thereafter to 480th place, then 481st through 500th, so even a small fish can win big! </li>
+              <li class="mb-2">Over $80,000 in cash and prizes including a 2-year lease on a <b>2022 Ford F150 XLT Super Crew Truck</b> drawn from all registered Fish Tickets! Prizes awarded by weight to the top 20 fish and every 10th place thereafter to 480th place, then 481st through 500th, so even a small fish can win big! </li>
               <li class="mb-2"><b>Each participant may register one fish per ticket;</b> tickets are $25 with no limit on the number of tickets an individual can purchase. <!--Everyone who registers a fish may request two free Blugold Football Tickets at the weigh-in stations (value $16). --></li>
-              <li class="mb-2">Raffle prizes include a <b>2020 Polaris Sportsman 570 4-wheeler</b>, raffle tickets are $5 each or 5 for $20! $100 Gift card prizes for the top fish by weight in each category: northern, walleye, and pan fish. "The One that Got Away" drawing from all Fish Ticket holders that did not register a fish, turn in Fish Ticket stub at The View by 2:30pm.</li>
+              <li class="mb-2">Raffle prizes include a <b>2021 Polaris Sportsman 570 4-wheeler</b>, raffle tickets are $5 each or 5 for $20! $100 Gift card prizes for the top fish by weight in each category: northern, walleye, and pan fish. "The One that Got Away" drawing from all Fish Ticket holders that did not register a fish, turn in Fish Ticket stub at The View by 2:30pm.</li>
             </ul>
           </div>
         </div>
