--- a/liveResults.html
+++ b/liveResults.html
@@ -111,17 +111,13 @@
     </div>
 
     <div class="content container px-4">
-      <div class="alert alert-danger alert-dismissible" style="width: 100%;">
-        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-       <a href="prizes.html" class="alert-link">Click here for 2021 Fish Prize Winners.</a> All winners will be contacted this week and a time will be arranged for prize pick up. Check out our 2021 safety procedures: <a href="./images/slider/prizeinfo.jpg" target="_blank" class="alert-link">Prize Distribution Info</a>
-      </div>
       <div class="row">
         <div class="col-12 pb-4">
           <h2 class="brand-blue">Live Results</h2>
-          <!-- <h5>Join us on February 6th on this page for live results.</h5> -->
+          <h5>Join us on February 12th on this page for live results.</h5>
         </div>
       </div>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col">
           <table id="table" class="table table-striped table-bordered">
             <thead class="thead-light">
@@ -137,7 +133,7 @@
             </tbody>
           </table>
         </div>
-      </div>
+      </div> -->
     </div>
   <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto pt-2">
     <div class="row mx-6">
