--- a/contact.html
+++ b/contact.html
@@ -111,10 +111,6 @@
     </div>
 
     <div class="content container px-4">
-      <div class="alert alert-danger alert-dismissible" style="width: 100%;">
-        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-       <a href="prizes.html" class="alert-link">Click here for 2021 Fish Prize Winners.</a> All winners will be contacted this week and a time will be arranged for prize pick up. Check out our 2021 safety procedures: <a href="./images/slider/prizeinfo.jpg" target="_blank" class="alert-link">Prize Distribution Info</a>
-      </div>
       <div class="row">
         <div class="col-md-6">
           <h2 class="brand-blue">Contact Us</h2>
@@ -155,8 +151,8 @@
           <table class="table">
             <thead>
               <tr>
-                <td scope="col">Name</td>
-                <td scope="col">Organization</td>
+                <th scope="col">Name</th>
+                <th scope="col">Organization</th>
               </tr>
             </thead>
             <tbody>
