Added ticket location
Added Wissota Lodge

--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
     					<li>Eau Claire Ford<span style="color:red">*</span></li>
     					<li>Jacobson's Hardware (bait available)<span style="color:red">*</span></li>
     					<li>UWEC Recreation <span style="color:red">*</span></li>
+    					<li>Wissota Lodge <span style="color:red">*</span></li>
     					<li>The Edge <span style="color:red">*</span></li>
     					<li>The View <span style="color:red">*</span></li>
               <li>The SandBar <span style="color:red">*</span></li>
