--- a/tickets.html
+++ b/tickets.html
@@ -117,7 +117,7 @@
 			</div>
 			<div class="col-12">
 				<ul class="px-6">
-					<li>Prizes awarded by weight to the top 20 fish and every 10th place thereafter to 480th place, then 481st through 500th, so even a small fish can win big!</li>
+					<li>Prizes awarded by weight to the top 20 fish and every 10th place thereafter to 480th place, then 481st through 500th.</li>
 					<li>The winner of the 2-year lease from Eau Claire Ford for the 2022 Ford F-150 XLT Super Crew will be drawn at random from the tickets stubs of all registered fish.</li>
 					<!--<li>Everyone who registers a fish may request two free Blugold Football Tickets at the weigh-in stations (value $16).</li>-->
 					<li>$100 gift cards will be given to the top fish by species: Northern, Walleye and Pan Fish.</li>
