General updates for 2022 event

--- a/tickets.html
+++ b/tickets.html
@@ -103,7 +103,7 @@
   <div class="container px-4">
     <div class="row">
 			<div class="col mx-2">
-				<h2 class="brand-blue"><a href="https://www.eventbrite.com/e/jigs-up-blugold-ice-fishing-contest-on-lake-wissota-tickets-95905450785?aff=erelexpmlt" target="_blank">Buy Tickets or Donate Here!</a></h2>
+				<h2 class="brand-blue"><a href="https://www.eventbrite.com/e/jigs-up-blugold-ice-fishing-contest-on-lake-wissota-tickets-146784876517" target="_blank">Buy Tickets or Donate Here!</a></h2>
         <i>*If donating, click the link above and navigate to the tickets button</i>
 			</div>
     </div>
@@ -112,13 +112,13 @@
 			<div class="col-12 mx-2">
 				<p><h5 class="d-inline brand-blue">Fish Tickets:</h5> $25, one ticket required for each fish registered, multiple tickets may be purchased</p>
 				<ul class="bulletless-grey py-1 pr-2">
-					<li><h5 class="my-0">Over $80,000 in cash and prizes including a 2-year lease on a <b>2022 Ford F150 XLT Super Crew Truck!</b></h5></li>
+					<li><h5 class="my-0">Over $80,000 in cash and prizes including a 2-year lease on a <b>new Ford F-150!</b></h5></li>
 				</ul>
 			</div>
 			<div class="col-12">
 				<ul class="px-6">
 					<li>Prizes awarded by weight to the top 20 fish and every 10th place thereafter to 480th place, then 481st through 500th.</li>
-					<li>The winner of the 2-year lease from Eau Claire Ford for the 2022 Ford F-150 XLT Super Crew will be drawn at random from the tickets stubs of all registered fish.</li>
+					<li>The winner of the 2-year lease from Eau Claire Ford for the Ford F-150 will be drawn at random from the tickets stubs of all registered fish.</li>
 					<!--<li>Everyone who registers a fish may request two free Blugold Football Tickets at the weigh-in stations (value $16).</li>-->
 					<li>$100 gift cards will be given to the top fish by species: Northern, Walleye and Pan Fish.</li>
 					<li>“The One that Got Away” drawing from all Fish Ticket holders that did not register a fish. Turn in Fish Ticket stub at The View-by 2:30pm.</li>
@@ -172,6 +172,7 @@
 					<li>The Edge <span style="color:red">*</span></li>
 					<li>The View <span style="color:red">*</span></li>
           <li>The SandBar <span style="color:red">*</span></li>
+          <li>Wissota Lodge <span style="color:red">*</span></li>
 				</ul>
 			</div>
 			<div class="col-12 mx-auto mb-5">
