--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
             <div class="carousel-item active">
               <img class="d-block img-fluid" src="./images/slider/logo2022.jpg" alt="First slide">
             </div>
-            <div class="carousel-item">
+            <!-- <div class="carousel-item">
               <img class="d-block img-fluid" src="./images/slider/eventmap.png" alt="Event map">
             </div>
             <div class="carousel-item">
               <img class="d-block img-fluid" src="./images/slider/prizeinfo.jpg" alt="Prize info">
-            </div>
+            </div> -->
             <div class="carousel-item">
               <img class="d-block img-fluid" src="./images/slider/slide2.jpeg" alt="Second slide">
             </div>
@@ -221,7 +221,7 @@
           </div>
           <div class="col-12 p-0">
             <ul class="bulletless-grey">
-              <li class="mb-2">Over $80,000 in cash and prizes including a 2-year lease on a <b>2022 Ford F150 XLT Super Crew Truck</b> drawn from all registered Fish Tickets! Prizes awarded by weight to the top 20 fish and every 10th place thereafter to 480th place, then 481st through 500th.</li>
+              <li class="mb-2">Over $80,000 in cash and prizes including a 2-year lease on a <b>new Ford F-150</b> drawn from all registered Fish Tickets! Prizes awarded by weight to the top 20 fish and every 10th place thereafter to 480th place, then 481st through 500th.</li>
               <li class="mb-2"><b>Each participant may register one fish per ticket;</b> tickets are $25 with no limit on the number of tickets an individual can purchase. <!--Everyone who registers a fish may request two free Blugold Football Tickets at the weigh-in stations (value $16). --></li>
               <li class="mb-2">Raffle prizes include a <b>2021 Polaris Sportsman 570 4-wheeler</b>, raffle tickets are $5 each or 5 for $20! $100 Gift card prizes for the top fish by weight in each category: northern, walleye, and pan fish. "The One that Got Away" drawing from all Fish Ticket holders that did not register a fish, turn in Fish Ticket stub at The View by 2:30pm.</li>
             </ul>
@@ -245,6 +245,7 @@
     					<li>The Edge <span style="color:red">*</span></li>
     					<li>The View <span style="color:red">*</span></li>
               <li>The SandBar <span style="color:red">*</span></li>
+              <li>Wissota Lodge <span style="color:red">*</span></li>
     				</ul>
           </div>
           <div class="col-12 mx-auto">
