--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
               <li>The View on Lake Wissota</li>
               <li class="mb-3">The Edge Pub & Eatery</li>
               <li><h5><b>Prize Distribution</b></h5></li>
-              <li>Feb. 12th</li>
+              <li>Starting at 3pm at The View on Lake Wissota</li>
               <!-- <li>The View on Lake Wissota starting at 3pm</li> -->
             </ul>
           </div>
@@ -221,9 +221,9 @@
           </div>
           <div class="col-12 p-0">
             <ul class="bulletless-grey">
-              <li class="mb-2">Over $80,000 in cash and prizes including a 2-year lease on a <b>new Ford F-150</b> drawn from all registered Fish Tickets! Prizes awarded by weight to the top 20 fish and every 10th place thereafter to 480th place, then 481st through 500th.</li>
+              <li class="mb-2">Over $80,000 in cash and prizes including a 2-year lease on a <b>New Ford F-150</b> drawn from all registered Fish Tickets! Prizes awarded by weight to the top 20 fish and every 10th place thereafter to 480th place, then 481st through 500th.</li>
               <li class="mb-2"><b>Each participant may register one fish per ticket;</b> tickets are $25 with no limit on the number of tickets an individual can purchase. <!--Everyone who registers a fish may request two free Blugold Football Tickets at the weigh-in stations (value $16). --></li>
-              <li class="mb-2">Raffle prizes include a <b>2021 Polaris Sportsman 570 4-wheeler</b>, raffle tickets are $5 each or 5 for $20! $100 Gift card prizes for the top fish by weight in each category: northern, walleye, and pan fish. "The One that Got Away" drawing from all Fish Ticket holders that did not register a fish, turn in Fish Ticket stub at The View by 2:30pm.</li>
+              <li class="mb-2">Raffle prizes include a <b>New Polaris Sportsman 4-wheeler</b>, raffle tickets are $5 each or 5 for $20! $100 Gift card prizes for the top fish by weight in each category: northern, walleye, and pan fish. "The One that Got Away" drawing from all Fish Ticket holders that did not register a fish, turn in Fish Ticket stub at The View by 2:30pm.</li>
             </ul>
           </div>
         </div>
