--- a/tickets.html
+++ b/tickets.html
@@ -112,7 +112,7 @@
 			<div class="col-12 mx-2">
 				<p><h5 class="d-inline brand-blue">Fish Tickets:</h5> $25, one ticket required for each fish registered, multiple tickets may be purchased</p>
 				<ul class="bulletless-grey py-1 pr-2">
-					<li><h5 class="my-0">Over $80,000 in cash and prizes including a 2-year lease on a <b>new Ford F-150!</b></h5></li>
+					<li><h5 class="my-0">Over $80,000 in cash and prizes including a 2-year lease on a <b>New Ford F-150!</b></h5></li>
 				</ul>
 			</div>
 			<div class="col-12">
@@ -130,7 +130,7 @@
 			<div class="col-12 mx-2">
 				<p><h5 class="d-inline brand-blue">Fish Ticket Availability:</h5> Tickets will be available online until 10:00pm on Friday, February 11th. Fish Tickets will be available on February 12th, 2022 at the weigh-in stations and The View 7-9am for $40.</p>
 				<ul class="bulletless-grey py-1 pr-2">
-					<li><class="my-0">Fish Tickets purchased online will be mailed through January 28th to the address indicated. After January 28th, tickets will be available for pick-up at the weigh-in station at The View. Tickets must be picked up at the Weigh-In Station at The View by 2pm. NOTE: You do not need to pick up your Fish Tickets until you are ready to weigh in a fish.</h5></li>
+					<li><class="my-0">Fish Tickets purchased online will be mailed through February 4th to the address indicated. After February 4th, tickets will be available for pick-up at the weigh-in station at The View. Tickets must be picked up at the Weigh-In Station at The View by 2pm. NOTE: You do not need to pick up your Fish Tickets until you are ready to weigh in a fish.</h5></li>
 				</ul>
 			</div>
 		</div>
@@ -151,7 +151,7 @@
 			<div class="col-12 mx-2">
 				<p><h5 class="d-inline brand-blue">Raffle Tickets:</h5> $5 each or 5 for $20</p>
 				<ul class="bulletless-grey py-1 pr-2">
-					<li><class="my-0">$7,500 in prizes includes a 2021 Polaris Sportsman 570 4-wheeler! Tickets can be purchased up until the drawing on Saturday, February 6th at the weigh-in stations and The View.</h5></li>
+					<li><class="my-0">$7,500 in prizes including a New Polaris Sportsman 4-wheeler! Tickets can be purchased up until the drawing on Saturday, February 12th at the weigh-in stations and The View.</h5></li>
 					<!--<li><br/></li>
 					<li><class="my-0">Claim tickets will be mailed through January 28th to the address indicated. After January 28th, claim tickets will be available for pick-up at the weigh-in station at The View. Pick up claim tickets by 2:00pm. Need not be present to win.</h5></li> -->
 				</ul>
